project/telegramBot/DevOps-project/kubernates/prometheus/prometheus-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress-hasan
  namespace: hasan
spec:
  ingressClassName: nginx
  rules:
  - host: hasan-prometheus.atech-bot.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-server
            port:
              number: 9090
